fixed overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {
+html, body {
     overflow-x: hidden;
     font-family: 'Roboto Slab', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -210,6 +210,18 @@ header.masthead .intro-text .intro-heading {
     margin: 15px 0;
     text-transform: none;
 }
+.btn-primary.btn-resume {
+    background-color: #222222;
+    margin: 50px 0;
+    padding: 20px;
+    border: none;
+    border-radius: 2px;
+}
+.btn-primary.btn-resume:hover {
+    color: black;
+}
+
+/* portfolio */
 
 #portfolio .portfolio-item {
     right: 0;
